--- a/2024_Homework_II.ipynb
+++ b/2024_Homework_II.ipynb
@@ -545,7 +545,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "333bb4",
    "metadata": {
     "collapsed": false,
@@ -568,7 +568,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
     "vscode": {
      "languageId": "raw"
@@ -595,7 +595,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "9b08b0",
    "metadata": {
     "collapsed": false,
@@ -621,7 +621,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "d357d6",
    "metadata": {
     "collapsed": false,
@@ -804,7 +804,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "800fe6",
    "metadata": {
     "collapsed": false,
@@ -827,7 +827,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "5391db",
    "metadata": {
     "collapsed": false,
@@ -887,7 +887,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "353cf0",
    "metadata": {
     "collapsed": false,
@@ -971,7 +971,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "03d406",
    "metadata": {
     "collapsed": false,
@@ -1053,7 +1053,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "fc313c",
    "metadata": {
     "collapsed": false,
@@ -1080,7 +1080,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "a9c40c",
    "metadata": {
     "collapsed": false,
@@ -1122,7 +1122,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
     "vscode": {
      "languageId": "raw"
@@ -1150,7 +1150,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "2d129a",
    "metadata": {
     "collapsed": false,
@@ -1190,7 +1190,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "5597c5",
    "metadata": {
     "collapsed": false,
@@ -1284,7 +1284,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "c115e6",
    "metadata": {
     "collapsed": false,
@@ -1324,7 +1324,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "4f3e58",
    "metadata": {
     "collapsed": false,
@@ -1370,7 +1370,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "c807fb",
    "metadata": {
     "collapsed": false,
@@ -1401,7 +1401,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "118997",
    "metadata": {
     "collapsed": false,
@@ -1445,7 +1445,7 @@
     "collapsed": false
    },
    "source": [
-    "Insert answer here: "
+    "Insert answer here: This peak overlaps with the following gene:  Human Gene ACADM (ENST00000420607.6_4) from GENCODE V45lift37"
    ]
   },
   {
@@ -1465,7 +1465,8 @@
     "collapsed": false
    },
    "source": [
-    "Insert answer here:"
+    "Insert answer here: p53-input.DMSO_peak_1\n",
+    "UNIX: grep -w \"chr1\\t76204325\\t76204623\" p53-input.DMSO_peaks.narrowPeak | awk '{print $4}'\n"
    ]
   },
   {
@@ -1485,7 +1486,9 @@
     "collapsed": false
    },
    "source": [
-    "Insert answer here:"
+    "Insert answer here: UNIX: grep -w \"chr1\\t76204325\\t76204623\" p53-input.DMSO_peaks.narrowPeak | awk '{print $8, $9}' \n",
+    "6.76072 (p-value)\n",
+    "1.13617 (q-value)"
    ]
   },
   {
@@ -1505,7 +1508,12 @@
     "collapsed": false
    },
    "source": [
-    "Insert answer here:"
+    "Insert answer here: Yes, the raw read patterns in p53_Nutlin.sub.bedgraph strongly support the called peak in the region chr15:63,449,045-63,449,917. The bedgraph data shows consistent read density across the interval, with values reaching up to 14 in intensity. This overlap between the reads and the peak region in p53-input.Nutlin_peaks.narrowPeak indicates that the peak is well-supported by the read data.\n",
+    "\n",
+    "UNIX:\n",
+    "awk '$1 == \"chr15\" && $2 >= 63449045 && $3 <= 63449917' p53-input.Nutlin_peaks.narrowPeak\n",
+    "\n",
+    "awk '$1 == \"chr15\" && $2 < 63449917 && $3 > 63449045' p53_Nutlin.sub.bedgraph\n"
    ]
   },
   {
@@ -1515,7 +1523,8 @@
     "collapsed": false
    },
    "source": [
-    "**Q30.** **[2 points]** Short answer: We will continue examining the peak: chr15:63,449,045-63,449,917. Where along the gene does this peak for the p53_Nutlin.sub.bedgraph file seem to fall? Does it seem to differ between isoforms (make sure to look at the UCSC genes)? Given that this data reflects p53 binding, a transcription factor, what might this mean about the relationship between p53 and the gene?"
+    "**Q30.** **[2 points]** Short answer: We will continue examining the peak: chr15:63,449,045-63,449,917. Where along the gene does this peak for the p53_Nutlin.sub.bedgraph file seem to fall? Does it seem to differ between isoforms (make sure to look at the UCSC genes)? Given that this data reflects p53 binding, a transcription factor, what might this mean about the relationship between p53 and the gene?\n",
+    "\n"
    ]
   },
   {
@@ -1525,7 +1534,12 @@
     "collapsed": false
    },
    "source": [
-    "Insert answer here:"
+    "Insert answer here:\n",
+    "The peak at chr15:63,449,045-63,449,917 for the p53_Nutlin.sub.bedgraph file overlaps with the RPS27L gene. Observing the UCSC gene tracks, this peak appears to fall within a long exon for one isoform of RPS27L but overlaps mostly intronic regions for the other isoforms. This difference suggests that p53 binding could have isoform-specific regulatory effects on RPS27L.\n",
+    "\n",
+    "Since p53 is a transcription factor, its binding in this region could influence the gene’s expression. For the isoform with the exon in this region, p53 binding might affect transcription directly within this exon, potentially altering splicing or expression levels. For the isoforms where the peak overlaps an intronic region, p53 binding may have a more indirect regulatory effect, potentially influencing splicing decisions or alternative transcription start sites.\n",
+    "\n",
+    "This suggests that p53 may regulate RPS27L in a way that could affect the production of different isoforms, allowing for tailored cellular responses under conditions where p53 is active, such as in response to stress or DNA damage."
    ]
   },
   {
@@ -1535,7 +1549,8 @@
     "collapsed": false
    },
    "source": [
-    "**Q31.** **[2 points]** Short answer:  The UCSC genome browser displays several tracks related to gene regulation. Display the ENCODE regulation panel. Which histone mark overlaps well with the region surrounding the peak identified above? Is this mark typically associated with activation or repression of genes?"
+    "**Q31.** **[2 points]** Short answer:  The UCSC genome browser displays several tracks related to gene regulation. Display the ENCODE regulation panel. Which histone mark overlaps well with the region surrounding the peak identified above? Is this mark typically associated with activation or repression of genes?\n",
+    "\n"
    ]
   },
   {
@@ -1545,7 +1560,7 @@
     "collapsed": false
    },
    "source": [
-    "Insert answer here:"
+    "Insert answer here: The H3K27Ac (Histone 3 Lysine 27 Acetylation) mark overlaps well with the region surrounding the peak identified at chr15:63,449,045-63,449,917. This histone modification is typically associated with gene activation. H3K27Ac is found near active promoters and enhancers, indicating regions where gene expression is likely to be upregulated. Its presence in this region suggests that the p53 binding site could play a role in activating transcription of the nearby RPS27L gene or its isoforms."
    ]
   },
   {
@@ -1565,7 +1580,7 @@
     "collapsed": false
    },
    "source": [
-    "Insert answer here:"
+    "Insert answer here: Among the organisms shown, Rhesus exhibits the highest conservation in the region of the ChIP-seq peak, as indicated by the dense and continuous black line in the MultiZ vertebrate alignment track. This high degree of conservation in Rhesus, a primate closely related to humans, suggests that this region is functionally important and has been preserved across primate evolution. Such conservation implies that the regulatory elements bound by p53 in this region may play a critical role in gene function in both humans and other primates, reinforcing the biological significance of this binding site."
    ]
   },
   {
@@ -1579,8 +1594,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
+   "cell_type": "markdown",
    "id": "302340",
    "metadata": {
     "collapsed": false,
@@ -1588,9 +1602,8 @@
      "languageId": "r"
     }
    },
-   "outputs": [],
    "source": [
-    "# write code below:"
+    "bedtools intersect -u -a p53-input.Nutlin_peaks.narrowPeak -b p53-input.DMSO_peaks.narrowPeak | wc -l"
    ]
   },
   {
@@ -1604,8 +1617,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "id": "625d42",
    "metadata": {
     "collapsed": false,
@@ -1613,9 +1625,13 @@
      "languageId": "r"
     }
    },
-   "outputs": [],
    "source": [
-    "# write code below:"
+    "wc -l p53-input.Nutlin_peaks.narrowPeak\n",
+    "bedtools intersect -u -a p53-input.Nutlin_peaks.narrowPeak -b p53-input.DMSO_peaks.narrowPeak | wc -l\n",
+    "echo \"scale=4; $(bedtools intersect -u -a p53-input.Nutlin_peaks.narrowPeak -b p53-input.DMSO_peaks.narrowPeak | wc -l) / $(wc -l < p53-input.Nutlin_peaks.narrowPeak)\" | bc\n",
+    "\n",
+    "\n",
+    "Fraction of Nutlin peaks in DMSO: 0.0304"
    ]
   },
   {
@@ -1650,8 +1666,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "id": "656ac6",
    "metadata": {
     "collapsed": false,
@@ -1659,9 +1674,11 @@
      "languageId": "r"
     }
    },
-   "outputs": [],
    "source": [
-    "# write code below:"
+    "# write code below:\n",
+    "UNIX : sed -n \"$(grep -n -m 1 'chr1\\t121484534\\t121485164' p53-input.DMSO_peaks.narrowPeak.bed | cut -d: -f1)p\" hglft_genome_e2d2_b144e0.bed\n",
+    "\n",
+    "The new location is: chr1:  121742736 - 121743366\n"
    ]
   },
   {
@@ -1684,7 +1701,21 @@
     "collapsed": false
    },
    "source": [
-    "Insert answer here:"
+    "Insert answer here:\n",
+    "\n",
+    "A total of 9 peaks failed to liftOver from the human reference genome (hg19) to the mouse reference genome (mm10).\n",
+    "\n",
+    "Reason for failure:\n",
+    "\n",
+    "These peaks likely failed to lift over for several reasons:\n",
+    "\n",
+    "Deleted in new: According to the error message \"Deleted in new: Sequence intersects no chains,\" these regions failed to map because they intersect with no alignment chains between hg19 and mm10. This means there are no homologous sequences in the mouse genome (mm10) for these specific regions in the human genome (hg19). These regions might have been deleted or diverged significantly in the mouse genome over evolutionary time.\n",
+    "\n",
+    "Lack of conservation: Some sequences in the human genome are not conserved in the mouse genome, particularly non-essential regions or segments unique to humans, which may have no counterpart in the mouse genome.\n",
+    "\n",
+    "Structural differences: Significant structural variations, such as insertions, deletions, or rearrangements between human and mouse genomes, make it impossible to map certain human regions to mouse.\n",
+    "\n",
+    "These factors, especially the lack of corresponding alignment chains, contribute to the inability to convert these specific human peaks to the mouse genome."
    ]
   }
  ],
