--- a/Homework III/Homework_III.ipynb
+++ b/Homework III/Homework_III.ipynb
@@ -52,7 +52,22 @@
      "languageId": "raw"
     }
    },
-   "source": []
+   "source": [
+    "Dataset Chosen: Experiment summary for ENCSR872YGQ\n",
+    "\t•\tAssay Type: Histone ChIP-seq\n",
+    "\t•\tEpigenetic Mark: H3K27ac (associated with active enhancers and promoters)\n",
+    "\t•\tTissue: Dorsolateral prefrontal cortex (Middle frontal area 46) from a female adult (89 years old) with Alzheimer’s disease\n",
+    "\t•\tPlatform: Illumina NextSeq 500\n",
+    "\t•\tProject: ENCODE4 (Bradley Bernstein Lab, Broad Institute)\n",
+    "\n",
+    "Why This Dataset?\n",
+    "\t1.\tRelevance to Disease: The dorsolateral prefrontal cortex is a critical brain region for cognitive functions, heavily affected in Alzheimer’s disease. Examining histone modifications in this area can reveal transcriptional activity linked to disease pathology.\n",
+    "\t2.\tEpigenetic Insight: The H3K27ac mark is essential for identifying active regulatory elements, such as enhancers and promoters, which may contribute to altered gene expression in Alzheimer’s disease.\n",
+    "\t3.\tSpecificity and Quality: The dataset is highly specific to Alzheimer’s disease, and the ENCODE project ensures high-quality, standardized data. This experiment is unreplicated but uses rigorous ENCODE methodologies, enhancing confidence in the findings.\n",
+    "\t4.\tData Compatibility: The dataset provides a BED narrowPeak file (hg38), which is compatible with the SNP analysis for Alzheimer’s disease (also in hg38 format).\n",
+    "\n",
+    "This dataset is ideal for identifying active genomic regions potentially linked to Alzheimer’s disease mechanisms, helping to pinpoint regulatory elements influenced by genetic variants associated with the condition."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -83,7 +98,9 @@
     }
    },
    "source": [
-    "$ "
+    "sort -k1,1 -k2,2n ENCFF983DQA.bed > ENCFF983DQA.sorted.bed\n",
+    "sort -k1,1 -k2,2n AD_SNPs_hg38.bed > ALZ_SNPs_hg38.sorted.bed\n",
+    "bedtools fisher -a ALZ_SNPs_hg38.sorted.bed -b ENCFF983DQA.sorted.bed -g human.hg38.genome"
    ]
   },
   {
@@ -94,7 +111,9 @@
     }
    },
    "source": [
-    "The two-tailed p-value is ___________."
+    "The two-tailed p-value is 2.874e-163.\n",
+    "\n",
+    "This extremely small value indicates that the observed overlap between Alzheimer’s-associated SNPs and H3K27ac-marked regions in the dorsolateral prefrontal cortex is highly statistically significant and is not due to random chance."
    ]
   },
   {
@@ -111,7 +130,26 @@
      "languageId": "raw"
     }
    },
-   "source": []
+   "source": [
+    "Yes, there was a significant association between the disease-associated genetic variants (SNPs from Alzheimer’s-associated regions) and the ENCODE mark (H3K27ac in the dorsolateral prefrontal cortex). The results from the Fisher’s exact test indicate an extremely small two-tailed p-value of 2.874e-163, and the enrichment ratio of 3.875 shows that the SNPs are almost 4 times more likely to fall within H3K27ac-marked regions than expected by random chance.\n",
+    "\n",
+    "Explanation of Findings\n",
+    "\n",
+    "\t•\tH3K27ac Mark: This histone modification is associated with active enhancers and promoters, which are key regulators of gene expression. The significant overlap suggests that Alzheimer’s-associated SNPs are enriched in regions where gene regulatory activity occurs.\n",
+    "\t•\tDorsolateral Prefrontal Cortex: This brain region is critical for cognitive functions, such as decision-making and memory, both of which are impaired in Alzheimer’s disease. The enrichment of SNPs in this tissue’s regulatory regions aligns with our understanding of Alzheimer’s pathology.\n",
+    "\t•\tImplications: The results indicate that these genetic variants likely influence the activity of nearby enhancers or promoters, thereby affecting the expression of genes associated with Alzheimer’s disease.\n",
+    "\n",
+    "\n",
+    "Surprised by the Result?\n",
+    "\n",
+    "\t•\tNot Surprised: The result is consistent with the biological hypothesis that disease-associated SNPs are likely to influence gene regulatory mechanisms in tissues relevant to the disease. Previous studies have implicated dysregulated gene expression in Alzheimer’s, and histone modifications like H3K27ac provide a window into these changes.\n",
+    "\t•\tWhy It’s Expected:\n",
+    "\t1.\tAlzheimer’s is a neurodegenerative disease that involves complex regulatory networks.\n",
+    "\t2.\tThe dorsolateral prefrontal cortex is a well-studied region in Alzheimer’s research.\n",
+    "\t3.\tThe SNPs used in this analysis were pre-identified as associated with the disease, making it plausible they would fall within active regulatory regions.\n",
+    "\n",
+    "The findings underscore the importance of integrating genetic and epigenetic data to better understand the molecular underpinnings of Alzheimer’s disease. These results point toward potential regulatory elements that might mediate the effects of genetic variants, paving the way for functional studies and therapeutic targeting.\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,6 +157,11 @@
    "source": [
     "### ENCODE: Finding Active regulatory regions"
    ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
