--- a/Homework III/Homework_III.ipynb
+++ b/Homework III/Homework_III.ipynb
@@ -159,11 +159,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -185,7 +180,15 @@
     }
    },
    "source": [
-    "$ "
+    "# Step 1: Sort both BED files (if not already sorted)\n",
+    "sort -k1,1 -k2,2n MeAc_genes.bed > MeAc_genes.sorted.bed\n",
+    "sort -k1,1 -k2,2n ENCFF234GVB.bed > ENCFF234GVB.sorted.bed\n",
+    "\n",
+    "# Step 2: Find entries in MeAc_genes.bed that do NOT overlap with H3K9me3 marks\n",
+    "bedtools intersect -v -a MeAc_genes.sorted.bed -b ENCFF234GVB.sorted.bed > MeAc_genes_no_H3K9me3.bed\n",
+    "\n",
+    "# Step 3: Count the number of genes that do NOT have H3K9me3 marks\n",
+    "wc -l MeAc_genes_no_H3K9me3.bed"
    ]
   },
   {
@@ -203,7 +206,7 @@
     }
    },
    "source": [
-    "____ genes"
+    "69 genes"
    ]
   },
   {
