--- a/Homework III/Homework_III.ipynb
+++ b/Homework III/Homework_III.ipynb
@@ -695,7 +695,21 @@
      "languageId": "raw"
     }
    },
-   "source": []
+   "source": [
+    "To process a different plate, such as plate2, using the pipeline you created, you would only need to make a few small changes:\n",
+    "\n",
+    "\t1.\tChange the Input File Name:\n",
+    "Update the variable that contains the plate file name (myplatefile) to point to plate2.csv.\n",
+    "\n",
+    "\t2.\tUpdate the Plate Name Variable:\n",
+    "Update the myplatename variable to reflect the new plate name (plate2).\n",
+    "\n",
+    "\t3.\tReload the Data:\n",
+    "Ensure that the new data is loaded into myplate from the updated file.\n",
+    "\n",
+    "\t4.\tThe Rest of the Pipeline:\n",
+    "Once myplatefile and myplatename are updated, the rest of the pipeline will process the new plate without any further changes because it was written generically. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -718,12 +732,12 @@
     }
    },
    "source": [
-    "Z-factor for plate 2 is: \n",
-    "Z-factor for plate 3 is: \n",
-    "Z-factor for plate 4 is: \n",
-    "Z-factor for plate 5 is: \n",
-    "Z-factor for plate 6 is: \n",
-    "Z-factor for plate 7 is: "
+    "Z-factor for plate 2 is: 0.6042501\n",
+    "Z-factor for plate 3 is: 0.4285661\n",
+    "Z-factor for plate 4 is: 0.4298547\n",
+    "Z-factor for plate 5 is: 0.6598047\n",
+    "Z-factor for plate 6 is: 0.5519932\n",
+    "Z-factor for plate 7 is: 0.5360766"
    ]
   },
   {
@@ -734,12 +748,12 @@
     }
    },
    "source": [
-    "Number of cells less than -4 for plate 2 is: \n",
-    "Number of cells less than -4 for plate 3 is: \n",
-    "Number of cells less than -4 for plate 4 is: \n",
-    "Number of cells less than -4 for plate 5 is: \n",
-    "Number of cells less than -4 for plate 6 is: \n",
-    "Number of cells less than -4 for plate 7 is: "
+    "Number of cells less than -4 for plate 2 is: 48\n",
+    "Number of cells less than -4 for plate 3 is: 7\n",
+    "Number of cells less than -4 for plate 4 is: 11\n",
+    "Number of cells less than -4 for plate 5 is: 1\n",
+    "Number of cells less than -4 for plate 6 is: 3\n",
+    "Number of cells less than -4 for plate 7 is: 1"
    ]
   },
   {
@@ -774,12 +788,25 @@
   },
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "Step one: Tell the computer to load the sampleid file into memory in R\n",
-    "Step two: Tell the computer to load the 'hit' file into memory in R\n",
-    "Step three:\n",
-    "..."
+    "Step 1: Tell the computer to load the sampleid file into memory in R\n",
+    "Step 2: Tell the computer to load the 'hit' file into memory in R\n",
+    "Step 3: For each row in the hits_df (representing a hit), find the corresponding row in sampleid_df.\n",
+    "\t•\tMatch on row, col, and plate. Specifically:\n",
+    "\t•\tCheck if the row in hits_df matches the row in sampleid_df.\n",
+    "\t•\tCheck if the col in hits_df matches the col in sampleid_df.\n",
+    "\t•\tCheck if the plate in hits_df matches the plate in sampleid_df.\n",
+    "Step 4: Extract the sampleid from sampleid_df for each matching hit.\n",
+    "\t•\tOnce a match is found, retrieve the sampleid from the corresponding row in sampleid_df.\n",
+    "Step 5: Store the extracted sampleids in a new list or data frame.\n",
+    "\t•\tUse a loop or vectorized approach to iterate through hits_df, appending the matched sampleid to a new list.\n",
+    "Step 6: Print the sampleids for all matched entries.\n",
+    "\t•\tOutput the collected sampleids using print(), write to a file using write.csv(), or otherwise format them as required."
    ]
   },
   {
