--- a/Homework III/Homework_III.ipynb
+++ b/Homework III/Homework_III.ipynb
@@ -855,11 +855,11 @@
     }
    },
    "source": [
-    "Feature: \n",
+    "Feature: Features are the individual measurable properties or characteristics of the data that are used by a machine learning model to make predictions or classifications. They represent the input variables.\n",
     "\n",
-    "Example:\n",
+    "Example: Examples are individual data points or instances in the dataset. Each example consists of one or more features and, in supervised learning, may also include a label.\n",
     "\n",
-    "Label: "
+    "Label: Labels are the target or output values that the machine learning model aims to predict. They are known outcomes provided during supervised learning for training the model."
    ]
   },
   {
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -913,14 +913,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of Model 1: 0.8 \n",
+      "Accuracy of Model 2: 0.8 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate accuracy for Model 1\n",
+    "m1_accuracy <- (m1_tp + m1_tn) / (m1_tp + m1_tn + m1_fp + m1_fn)\n",
+    "\n",
+    "# Calculate accuracy for Model 2\n",
+    "m2_accuracy <- (m2_tp + m2_tn) / (m2_tp + m2_tn + m2_fp + m2_fn)\n",
+    "\n",
+    "# Print the results\n",
+    "cat(\"Accuracy of Model 1:\", m1_accuracy, \"\\n\")\n",
+    "cat(\"Accuracy of Model 2:\", m2_accuracy, \"\\n\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -931,14 +950,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of Model 1: 0.6183128 \n",
+      "Precision of Model 2: 0.9107143 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate precision for Model 1\n",
+    "m1_precision <- m1_tp / (m1_tp + m1_fp)\n",
+    "\n",
+    "# Calculate precision for Model 2\n",
+    "m2_precision <- m2_tp / (m2_tp + m2_fp)\n",
+    "\n",
+    "# Print the results\n",
+    "cat(\"Precision of Model 1:\", m1_precision, \"\\n\")\n",
+    "cat(\"Precision of Model 2:\", m2_precision, \"\\n\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -949,14 +987,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Specificity of Model 1: 0.7291971 \n",
+      "Specificity of Model 2: 0.9817518 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate specificity for Model 1\n",
+    "m1_specificity <- m1_tn / (m1_tn + m1_fp)\n",
+    "\n",
+    "# Calculate specificity for Model 2\n",
+    "m2_specificity <- m2_tn / (m2_tn + m2_fp)\n",
+    "\n",
+    "# Print the results\n",
+    "cat(\"Specificity of Model 1:\", m1_specificity, \"\\n\")\n",
+    "cat(\"Specificity of Model 2:\", m2_specificity, \"\\n\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -967,14 +1024,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall of Model 1: 0.9539683 \n",
+      "Recall of Model 2: 0.4047619 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate recall for Model 1\n",
+    "m1_recall <- m1_tp / (m1_tp + m1_fn)\n",
+    "\n",
+    "# Calculate recall for Model 2\n",
+    "m2_recall <- m2_tp / (m2_tp + m2_fn)\n",
+    "\n",
+    "# Print the results\n",
+    "cat(\"Recall of Model 1:\", m1_recall, \"\\n\")\n",
+    "cat(\"Recall of Model 2:\", m2_recall, \"\\n\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -990,7 +1066,34 @@
      "languageId": "raw"
     }
    },
-   "source": []
+   "source": [
+    "No, these two models are not producing equivalent performance, even though their accuracy is the same (0.8 or 80%). The differences in precision, specificity, and recall reveal that the models behave differently depending on the positive or negative classification scenarios.\n",
+    "\n",
+    "Key Observations from the Metrics:\n",
+    "\t1.\tModel 1:\n",
+    "\t•\tHigh Recall (0.9538): It identifies a very high proportion of actual positive examples correctly.\n",
+    "\t•\tModerate Precision (0.6183): A significant portion of the predicted positives are false positives.\n",
+    "\t•\tModerate Specificity (0.7292): It struggles more with correctly identifying actual negatives compared to Model 2.\n",
+    "\t2.\tModel 2:\n",
+    "\t•\tHigh Specificity (0.9818): It identifies actual negatives very accurately.\n",
+    "\t•\tHigh Precision (0.9107): Most of its positive predictions are correct.\n",
+    "\t•\tLow Recall (0.4048): It misses a large proportion of actual positives, as indicated by a high false negative rate.\n",
+    "\n",
+    "When to Prefer Each Model:\n",
+    "\t1.\tWhen to Use Model 1:\n",
+    "\t•\tSituation: When it is critical to identify as many positives as possible (high recall is prioritized), even if it means tolerating more false positives.\n",
+    "\t•\tExample Application:\n",
+    "\t•\tDisease Screening: In medical diagnostics, it’s better to catch all potential positive cases (e.g., detecting a disease) even if some false positives occur, as they can be followed up with more specific tests.\n",
+    "\t2.\tWhen to Use Model 2:\n",
+    "\t•\tSituation: When it is critical to minimize false positives and prioritize precision and specificity, even if some positives are missed (lower recall).\n",
+    "\t•\tExample Application:\n",
+    "\t•\tFraud Detection: In financial systems, false positives (flagging legitimate transactions as fraudulent) can disrupt user experience. It is better to have fewer false alarms while still identifying fraudulent transactions accurately.\n",
+    "\n",
+    "\tModel 1 prioritizes recall, making it suitable for scenarios where missing positives has severe consequences.\n",
+    "\tModel 2 prioritizes precision and specificity, making it suitable for scenarios where minimizing false positives is essential.\n",
+    "\n",
+    "Neither model is universally better; the choice depends on the specific goals and trade-offs of the application."
+   ]
   }
  ],
  "metadata": {
